--- a/test-CF160422-0119.html
+++ b/test-CF160422-0119.html
@@ -1,14 +1,13 @@
 
 <html>
 // <html lang="en">
-<head>
-    <meta charset="utf-8">
+  <head><meta charset="utf-8">
     <title>D3 Demo: Linear scales</title>
     <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
     // <style type="text/css">
-        /* No style rules here yet */       
+    /* No style rules here yet */       
     </style>
-</head>
+  </head>
 <body>
     <script type="text/javascript">
 
